<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:background="@drawable/login_gradient">

    <TextView
        android:id="@+id/header_create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccountHeader"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:text="@string/nameText"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_create_account_title" />

    <TextView
        android:id="@+id/create_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/emailText"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/create_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/passwordText"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/create_email_text"
        app:layout_constraintTop_toBottomOf="@+id/create_email_text" />

    <TextView
        android:id="@+id/re_create_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/reEnterPasswordText"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/create_password_text"
        app:layout_constraintTop_toBottomOf="@+id/create_password_text" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/special_edit_text"
        android:ems="10"
        android:paddingLeft="5dp"
        android:inputType="text"
        android:hint="@string/nameHint"
        android:textColorHint="@color/whiteBlue"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_text"
        app:layout_constraintStart_toEndOf="@+id/name_text" />

    <EditText
        android:id="@+id/create_email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/special_edit_text"
        android:ems="10"
        android:paddingLeft="5dp"
        android:hint="@string/emailHint"
        android:textColorHint="@color/whiteBlue"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/create_email_text"
        app:layout_constraintEnd_toEndOf="@+id/name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/name_edit_text" />

    <EditText
        android:id="@+id/create_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/special_edit_text"
        android:ems="10"
        android:paddingLeft="5dp"
        android:textColorHint="@color/whiteBlue"
        android:hint="@string/passwordHint"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/create_password_text"
        app:layout_constraintEnd_toEndOf="@+id/create_email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/create_email_edit_text" />

    <EditText
        android:id="@+id/re_create_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/special_edit_text"
        android:ems="10"
        android:paddingLeft="5dp"
        android:textColorHint="@color/whiteBlue"
        android:hint="@string/rePasswordHint"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/re_create_password_text"
        app:layout_constraintEnd_toEndOf="@+id/create_password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/create_password_edit_text" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/special_button"
        android:text="@string/submitBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="185dp"
        android:layout_height="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopl" />
</androidx.constraintlayout.widget.ConstraintLayout>