<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_gradient">


    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginHeader"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/emailText"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <EditText
        android:id="@+id/Email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/special_edit_text"
        android:ems="10"
        android:paddingLeft="5dp"
        android:hint="@string/emailHint"
        android:textColorHint="@color/whiteBlue"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_title"
        app:layout_constraintStart_toEndOf="@+id/email_title" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/passwordText"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/email_title"
        app:layout_constraintStart_toStartOf="@+id/email_title"
        app:layout_constraintTop_toBottomOf="@+id/email_title" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/special_edit_text"
        android:textColor="@color/white"
        android:paddingLeft="5dp"
        android:textColorHint="@color/whiteBlue"
        android:hint="@string/passwordHint"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_title"
        app:layout_constraintEnd_toEndOf="@+id/Email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/Email_edit_text" />

    <Button
        android:id="@+id/create_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/special_button"
        android:text="@string/createAccountBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/loginBtn"
        android:background="@drawable/special_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/create_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="185dp"
        android:layout_height="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopl" />

</androidx.constraintlayout.widget.ConstraintLayout>