<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseSwap"
    android:background="@drawable/profile_gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exercise_swap_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        android:textSize="32dp"
        android:paddingTop="44dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/special_button"
        android:text="@string/cancelBtn"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/exercise_swap_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/exerciseSwapText"
        android:textColor="@color/blue"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <ListView
        android:id="@+id/exercsies_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/veryLightBlue"
        android:divider="@color/darkBlue"
        android:dividerHeight="5dp"
        android:listSelector="@color/blue"/>

</LinearLayout>