<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Readiness"
    android:orientation="vertical"
    android:background="@drawable/profile_gradient">
    <TextView
        android:id="@+id/readiness_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/readinessHeader"
        android:textColor="@color/darkBlue"
        android:textSize="32dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="72dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/current_weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cWText"
            android:textColor="@color/black"
            android:textSize="18dp" />
        <EditText
            android:id="@+id/current_weight_value_text"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/blue"
            android:inputType="numberDecimal"
            android:layout_weight="1" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbsText"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_weight="3"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tiredness_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tirednessText"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/tiredness_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingLeft="32dp">
        <RadioButton
            android:id="@+id/tiredness_rating_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating1"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/tiredness_rating_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating2"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/tiredness_rating_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating3"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/tiredness_rating_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating4"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/tiredness_rating_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating5"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"
            android:selectAllOnFocus="true"/>

    </RadioGroup>

    <TextView
        android:id="@+id/soreness_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorenessText"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/soreness_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingLeft="32dp">
        <RadioButton
            android:id="@+id/soreness_rating_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating1"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/soreness_rating_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating2"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/soreness_rating_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating3"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/soreness_rating_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating4"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/soreness_rating_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating5"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"
            android:selectAllOnFocus="true"/>
    </RadioGroup>

    <TextView
        android:id="@+id/motivation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/motiveText"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/motivation_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingLeft="32dp">
        <RadioButton
            android:id="@+id/motivation_rating_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating1"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/motivation_rating_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating2"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/motivation_rating_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating3"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/motivation_rating_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating4"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/motivation_rating_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating5"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"
            android:selectAllOnFocus="true"/>

    </RadioGroup>

    <TextView
        android:id="@+id/diet_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dietText"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/diet_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingLeft="32dp">
        <RadioButton
            android:id="@+id/diet_rating_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating1"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/diet_rating_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating2"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/diet_rating_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating3"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/diet_rating_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating4"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/diet_rating_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating5"
            android:textColor="@color/midBlue"
            android:textSize="15dp"
            android:layout_weight="1"
            android:selectAllOnFocus="true"/>

    </RadioGroup>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/special_button"/>


</LinearLayout>